css/main.css
table.fixedHeader-floating {
  position: fixed;
}

table.fixedHeader-floating.no-footer {
  border-bottom-width: 0;
}

table.fixedHeader-locked {
  position: absolute;
}

table.fixedHeader-locked {
  position: absolute;
}


/* Reset
———————————————————————————————————— */
* {
box-sizing: border-box;
}
body {
  font-family: sans-serif;
  padding: 0;
  margin: 0;
}
ul {
    list-style: none;
    padding: 0;
    margin: 0;
}
/* END Reset
———————————————————————————————————— */
/* Layout
———————————————————————————————————— */
body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100%;
  font-size: 18px;
  line-height: 24px;
  background: #223;
}
body,
body a {
  color: #fff;
}
body > * {
  flex: 1 100%;
}
header,
footer {
padding: 4ex;
}
.main {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}
/* END Layout
———————————————————————————————————— */
/* Header
———————————————————————————————————— */
header {
  flex: 0 250px;
  min-height: 100%;
  background: #39f;
}
/* END Header
———————————————————————————————————— */
/* Table
———————————————————————————————————— */
.row {
    display: flex;
    justify-content: space-between;
    margin-bottom: 3ex;
}
#table {
    table-layout: fixed;
}
thead {
    background: #e64;
}
tr:nth-of-type(2n+2) {
    background: #335;
}
td {
    padding: 1ex;
}
#table_filter label {
    position: absolute;
    right: 0;
    margin-right: -146px;
    background: #39f;
    padding: 1ex;
    border-radius: 5px 0 0 5px;
    transition: margin-right .2s ease;
    margin-top: 100px;
}
#table_filter label:hover,
#table_filter label:focus {
margin-right: 0;
}
input[type="search"] {
    margin-left: 2ex;
}
/* END Table
———————————————————————————————————— */
/* Footer
———————————————————————————————————— */
footer {
  display: flex;
}
footer > * {
  flex: 1 100%;
}
.social-media-list svg {
    max-width: 4ex;
}
/* END Footer
———————————————————————————————————— */
/* MQ
———————————————————————————————————— */
@media only screen and (max-width : 1023px) {
	/* Styles */
	body {
		flex-direction: column;
	}
}
/* END MQ
———————————————————————————————————— */

